--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rust-test"
 version = "0.1.0"
-authors = ["Roberts Kalnins <rkalnins314@gmail.com>"]
+authors = ["Roberts Kalnins <robertsmkalnins@gmail.com>"]
 edition = "2018"
 
 [dependencies]
